maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:24: error: ')' expected but 'else' found.
  } else if ( !isDirectionFree(Direction.NORTH) && !isDirectionFree2(Direction.EST) ){
    ^